2002-10-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: fix typo.

2002-10-30  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Bump version.
	* doc/api/Makefile.am: Make `make demo` less likely to fail.

2002-10-30  Theodore A. Roth  <troth@openavr.org>

	* doc/api/dox.css: Change default html colors.
	* doc/api/dox_html_header: Don't spec body bgcolor.

2002-10-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Fix the fix.

2002-10-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Make the addresses used consistent.
	* doc/api/malloc-x*.fig: Ditto.

2002-10-28  Theodore A. Roth  <troth@openavr.org>

	* doc/api/malloc-std.fig: Make figs more consistent.
	* doc/api/malloc-x1.fig: Make figs more consistent.
	* doc/api/malloc-x2.fig: Make figs more consistent.
	* doc/api/malloc.dox: Grammar and spelling fixups.

2002-10-28  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* configure.in: Fix typo.
	Update my email address.
	Add CHECK_PNG_UTILS.
	* doc/api/Makefile.am: Add png and eps files to clean list.
	Add transparency to png images.
	* doc/examples/demo/Makefile: Add transparency to png images.

2002-10-28  Theodore A. Roth  <troth@openavr.org>

	* doc/api/Makefile.am: Use png instead of gif images.
	* doc/api/malloc.dox: Ditto.

2002-10-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc*.fig: Improve pictures.
	* doc/api/malloc.dox: fix LaTeX pic widths.

2002-10-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Include some pictures.
	* doc/api/Makefile.am: pictures' infrastructure.
	* doc/api/doxygen.conf.in: pictures' infrastructure.
	* doc/api/malloc*.fig: picture sources.

2002-10-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Explain malloc details.
	* include/stdlib.h: refer to malloc explanation.
	* doc/api/Makefile.am: include malloc.dox.
	* doc/api/sections.dox: refer to malloc explanation.
